--- a/core/src/main/res/raw/ayp_youtube_player.html
+++ b/core/src/main/res/raw/ayp_youtube_player.html
@@ -2,8 +2,9 @@
 <html>
   <style type="text/css">
         html, body {
-            height: 100%;
-            width: 100%;
+            height: 1000%;
+            width: 1000%;
+            transform: scale(0.1);
             margin: 0;
             padding: 0;
             background-color: #000000;
